@@ -1,5 +1,7 @@
 2006-10-08  Miguel de Icaza  <miguel@novell.com>
 
+	* src/gstr.c (g_strdup): should allow NULL as an argument.
+
 	* src/ghashtable.c (g_hash_table_new_alloc,
 	g_hash_table_new_full_alloc): Add new entry points that will be
 	used for GC-aware hashtables. 
